--- a/道.md
+++ b/道.md
@@ -1,4 +1,4 @@
-We want to build a [Cosmology](https://github.com/cosmology-tech/cosmos-wallet)-like starter dApp but for Dart / Flutter, for trustless mobile-friendly peer-to-peer operation in the field. The project has emerged from the need to allow for field inspectors of the decentralized power grid infrastructure to have Android, iOS, or at substations - Windows / Mac / Linux apps w/ WalletConnect support + QR code driven workflows, with minimum code modification.
+We want to build a [Cosmology](https://github.com/cosmology-tech/cosmos-wallet)-like starter dApp but for Dart / Flutter, for **trustless mobile-friendly peer-to-peer operation in the field**. The project has emerged from the need to allow for field inspectors of the decentralized power grid infrastructure to have **Android, iOS,** or at substations - **Windows / Mac / Linux** apps w/ WalletConnect support + QR code driven workflows, with minimum code modification.
 
 0. a `birb` is a decentralized, censorship-resistant cross-platform interchain dApp that consists of a combination of `Dart / Flutter` and `FFI Rust` components (and wrapped `JS` if we absolutely have to)
 
