--- a/道.md
+++ b/道.md
@@ -9,7 +9,7 @@ We want to build a [Cosmology](https://github.com/cosmology-tech/cosmos-wallet)-
 **cosmrs** - Rust client https://docs.rs/cosmrs/latest/cosmrs/
 https://github.com/PeggyJV/ocular
 
-**CosmJS wrapper** - similar to https://github.com/y-pakorn/flutter\_web3,  one can wrap the following:
+**CosmJS wrapper** - similar to https://github.com/y-pakorn/flutter_web3,  one can wrap the following:
 https://www.npmjs.com/package/@cosmjs
 ... and then gradually oxidize 🦀 / add libp2p functionality for swarm operation in hostile environments https://docs.rs/libp2p-swarm/latest/libp2p_swarm/ (e.g. trustless peer discovery)
 
