--- a/道.md
+++ b/道.md
@@ -6,7 +6,7 @@ We want to build a [Cosmology](https://github.com/cosmology-tech/cosmos-wallet)-
 
 **Dart** - implementing `sign` etc. for WalletConnect similar to how Algorand did it: https://github.com/RootSoft/walletconnect-dart-sdk/pull/71
 
-**cosmrs** - Rust client https://docs.rs/cosmrs/latest/cosmrs/
+**Rust FFI** -  client https://docs.rs/cosmrs/latest/cosmrs/
 https://github.com/PeggyJV/ocular
 
 **CosmJS wrapper** - similar to https://github.com/y-pakorn/flutter_web3,  one can wrap the following:
